--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -1,3 +1,5 @@
+@import "scss/variables.scss";
+
 *,
 *::after,
 *::before {
@@ -13,5 +15,21 @@ body {
     position: fixed;
     bottom: 0;
     padding: 0.5em;
+    @include neumorphism(0.3em, 1em, 3em);
+    margin: 0.5em;
+  }
+
+  .tableau {
+    .element {
+      @include neumorphism(0.3em, 1em, 3em);
+      width: 3em;
+      height: 4em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      span {
+        font-size: 2em;
+      }
+    }
   }
 }
