--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -20,7 +20,9 @@ body {
   }
 
   .tableau {
+    position: relative;
     .element {
+      position: absolute;
       @include neumorphism(0.3em, 1em, 3em);
       width: 3em;
       height: 4em;
@@ -28,7 +30,7 @@ body {
       justify-content: center;
       align-items: center;
       span {
-        font-size: 2em;
+        font-size: 1.3em;
       }
     }
   }
